@@ -11,11 +11,13 @@ files that are shared by more than one package.
   </SPLASH-TEXT>
   <FINISH-TEXT>
 The Nautilus installer has completed your installation, and you're ready to go.  
-To run Nautilus, select it from the GNOME menu: Main (footprint) -> Programs -> Applications -> Nautilus
+To run Nautilus, select it from the GNOME menu: 
+Main (footprint) -> Programs -> Applications -> Nautilus
 
 Please keep up-to-date on Eazel news at http://www.eazel.com 
 
-If you have any suggestions, please submit them at: http://www.eazel.com/feedback.html
+If you have any suggestions, please submit them at: 
+http://www.eazel.com/feedback.html
   </FINISH-TEXT>
   <CATEGORY name="Nautilus @VERSION@">
     <EXCLUSIVE/>
