@@ -1,3 +1,11 @@
+2001-03-08  Maciej Stachowiak  <mjs@eazel.com>
+
+	reviewed by: Adam Elman  <aelman@eazel.com>
+
+	* nautilus-installer/package-list.xml.in: Put in some line breaks
+	to fix bug 7543 (Text on installer does not wrap in completion
+	window).
+
 2001-03-08  Darin Adler  <darin@eazel.com>
 
 	reviewed by: John Sullivan <sullivan@eazel.com>
